# picobot

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md  config.example.toml  heartbeats_scheduling.md  memory_plan.md  picobot.example.toml  refactor_for_whatsapp.md  rust-toolchain.toml
docs/: phase5-task2-plan.md
reference/: AGENTS.md  PLAN.md  README.md  architecture.md
reference/src/: main.rs
reference/src/channels/: mod.rs  permissions.rs  websocket.rs  whatsapp.rs
reference/src/cli/: mod.rs  repl.rs  tui.rs  ws_client.rs
reference/src/delivery/: queue.rs  tracking.rs
reference/src/heartbeats/: mod.rs
reference/src/kernel/: agent_loop.rs  privacy.rs
reference/src/models/: genai_adapter.rs  router.rs  types.rs
reference/src/notifications/: mod.rs  queue.rs  service.rs  whatsapp.rs
reference/src/scheduler/: job.rs  service.rs  store.rs
reference/src/server/: metrics.rs  middleware.rs  mod.rs  rate_limit.rs  routes.rs  runtime.rs  snapshot.rs
reference/src/session/: db.rs  error.rs  mod.rs  persistent_manager.rs
reference/src/tools/: builtin.rs  memory.rs  registry.rs  shell.rs
reference/tests/: scheduler_claiming.rs  scheduler_integration.rs  server_api.rs
scripts/: usage_stats.sh
src/: config.rs  lib.rs  main.rs
src/channels/: adapter.rs  api.rs  config.rs  mod.rs  permissions.rs  repl.rs  websocket.rs  whatsapp.rs
src/cli/: mod.rs  tui.rs  ws_client.rs
src/delivery/: mod.rs  queue.rs
src/kernel/: agent.rs  agent_loop.rs  context.rs  core.rs  kernel.rs  memory.rs  mod.rs  permissions.rs  privacy.rs  session.rs
src/models/: genai_adapter.rs  mod.rs  openai_compat.rs  router.rs  traits.rs  types.rs
src/notifications/: channel.rs  queue.rs  service.rs  whatsapp.rs
src/providers/: error.rs  factory.rs  mod.rs
src/scheduler/: error.rs  executor.rs  job.rs  mod.rs  service.rs  store.rs
src/server/: app.rs  metrics.rs  middleware.rs  mod.rs  rate_limit.rs  routes.rs  runtime.rs  scheduler_routes.rs  snapshot.rs  state.rs  ws.rs
src/session/: adapter.rs  db.rs  error.rs  manager.rs  memory.rs  migration.rs  mod.rs  persistent_manager.rs  retention.rs  snapshot.rs  summarization.rs  types.rs
src/tools/: builtin.rs  filesystem.rs  http.rs  memory.rs  mod.rs  multimodal_looker.rs  net_utils.rs  notifications.rs  notify.rs  path_utils.rs  registry.rs  rig_wrapper.rs  schedule.rs  schema.rs  search.rs  shell.rs  shell_policy.rs  shell_runner.rs  traits.rs  vision.rs
tests/: api_integration.rs  delivery_queue.rs  kernel_integration.rs  scheduler_claiming.rs  scheduler_integration.rs  scheduler_lifecycle.rs  scheduler_security.rs  server_api.rs  tool_execution_integration.rs
