[package]
name = "picobot"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
async-openai = { version = "0.32.4", features = ["_api", "byot", "rustls", "chat-completion", "chat-completion-types"] }
futures = "0.3"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.9"
tokio = { version = "1", features = ["full"] }
jsonschema = "0.26"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
glob = "0.3"
dirs = "6"
anyhow = "1"
crossterm = "0.28"
ratatui = "0.29"
chrono = { version = "0.4", features = ["serde", "clock"] }
axum = { version = "0.8", features = ["json", "macros", "ws"] }
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-webpki-roots"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "util"] }
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"
url = "2"
qrcode = "0.14"
whatsapp-rust = "0.2"
whatsapp-rust-sqlite-storage = "0.2"
whatsapp-rust-tokio-transport = "0.2"
whatsapp-rust-ureq-http-client = "0.2"
wacore = "0.2"
wacore-binary = "0.2"
waproto = "0.2"

[patch.crates-io]
whatsapp-rust = { git = "https://github.com/jlucaso1/whatsapp-rust", branch = "main" }
whatsapp-rust-sqlite-storage = { git = "https://github.com/jlucaso1/whatsapp-rust", branch = "main" }
whatsapp-rust-tokio-transport = { git = "https://github.com/jlucaso1/whatsapp-rust", branch = "main" }
whatsapp-rust-ureq-http-client = { git = "https://github.com/jlucaso1/whatsapp-rust", branch = "main" }
wacore = { git = "https://github.com/jlucaso1/whatsapp-rust", branch = "main" }
wacore-appstate = { git = "https://github.com/jlucaso1/whatsapp-rust", branch = "main" }
wacore-binary = { git = "https://github.com/jlucaso1/whatsapp-rust", branch = "main" }
wacore-libsignal = { git = "https://github.com/jlucaso1/whatsapp-rust", branch = "main" }
wacore-noise = { git = "https://github.com/jlucaso1/whatsapp-rust", branch = "main" }
waproto = { git = "https://github.com/jlucaso1/whatsapp-rust", branch = "main" }
