[package]
name = "picobot"
version = "0.1.0"
edition = "2024"

[dependencies]
rig-core = "0.30"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
jsonschema = "0.41"
anyhow = "1"
thiserror = "2"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }
