[package]
name = "picobot"
version = "0.1.0"
edition = "2024"

[dependencies]
rig-core = "0.30"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
jsonschema = "0.41"
anyhow = "1"
thiserror = "2"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }
axum = { version = "0.8", features = ["macros"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["chrono"] }
cron = "0.13"
chrono-tz = "0.10"
dashmap = "6"
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1"
qrcode = "0.14"
whatsapp-rust = "0.2"
whatsapp-rust-sqlite-storage = "0.2"
whatsapp-rust-tokio-transport = "0.2"
whatsapp-rust-ureq-http-client = "0.2"
wacore = "0.2"
wacore-binary = "0.2"
waproto = "0.2"
